# l33t

./: .clangd  .dockerignore  .gitignore  .test.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.zig  build.zig.zon  build_and_test.py  go.mod  go.sum  pytest.ini  run_tests.py  tests.exs  tests.zig
.github/workflows/: test.yml
l33tlib/: CMakeLists.txt
l33tlib/docs/html/: annotated.html  classes.html  dir_2e852e81604ea7ea6f1208ba345c8a5e.html  dir_7ed9f7a5df67fb762ac28375b67033d6.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  l33t_8h.html  l33t_8h_source.html  list_8h.html  list_8h_source.html  structlist__node__s-members.html  structlist__node__s.html  structtree__s-members.html  structtree__s.html  tree_8h.html  tree_8h_source.html
l33tlib/docs/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  defines_1.js  defines_2.js  files_0.js  functions_0.js  pages_0.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_3.js
l33tlib/docs/latex/: annotated.tex  dir_2e852e81604ea7ea6f1208ba345c8a5e.tex  dir_7ed9f7a5df67fb762ac28375b67033d6.tex  files.tex  index.tex  l33t_8h.tex  l33t_8h_source.tex  list_8h.tex  list_8h_source.tex  refman.tex  structlist__node__s.tex  structtree__s.tex  tree_8h.tex  tree_8h_source.tex
l33tlib/include/: error.h  l33t.h  list.h  stack.h  tree.h
l33tlib/src/: list.c  stack.c  tree.c
l33tlib/test/: test_list.c  test_stack.c  test_tree.c
problems/01/: CMakeLists.txt  solution.go  solution.zig  solution_test.go  test_solution.py  two-sum.md  two_sum.c  two_sum.exs
problems/02/: CMakeLists.txt  solution.py  test_solution.py  valid_parentheses.c  valid_parentheses.exs  valid_parentheses_test.go
problems/03/: CMakeLists.txt  README.md  merge_two_sorted_lists.c  merge_two_sorted_lists.exs  merge_two_sorted_lists.py  solution.py
problems/04/: CMakeLists.txt  best-time-to-buy-and-sell-stock.md  best_time_to_buy_and_sell_stock.c  best_time_to_buy_and_sell_stock.exs  best_time_to_buy_and_sell_stock_test.go  solution.py
problems/05/: CMakeLists.txt  solution.py  valid-palindrome.md  valid_palindrome.c  valid_palindrome.exs  valid_palindrome_test.go
problems/06/: CMakeLists.txt  invert_binary_tree.c  invert_binary_tree.exs  solution.go  solution_test.go
problems/07/: CMakeLists.txt  valid_anagram.c  valid_anagram.exs  valid_anagram.go  valid_anagram.py
problems/08/: CMakeLists.txt  binary-search.md  binary_search.c  solution.go  solution.py  solution_test.go
problems/09/: CMakeLists.txt  flood-fill.md  flood_fill.c  solution_test.go
problems/1/: solution.py
problems/10/: CMakeLists.txt  lowest-common-ancestor-of-a-binary-search-tree.md  lowest_common_ancestor.c  solution.py
problems/11/: CMakeLists.txt  balanced-binary-tree.md  balanced_binary_tree.c  balanced_binary_tree_test.go  solution.go  solution.py
problems/12/: CMakeLists.txt  linked-list-cycle.md  linked_list_cycle.c  linked_list_cycle.py  solution.go  solution_test.go
problems/13/: CMakeLists.txt  implement-queue-using-stacks.md  implement_queue_using_stacks.c  implement_queue_using_stacks.py  implement_queue_using_stacks_test.go  solution.go
problems/14/: CMakeLists.txt  first-bad-version.md  first_bad_version.c  first_bad_version.go  first_bad_version.py  first_bad_version_test.go
problems/15/: CMakeLists.txt  ransom-note.md  ransom_note.c  solution.go  solution.py  solution.zig  solution_test.go
problems/16/: CMakeLists.txt  climbing-stairs.md  climbing_stairs.c  solution.py
problems/17/: CMakeLists.txt  longest-palindrome.md  longest_palindrome.c  longest_palindrome_test.go  solution.go  solution.py
problems/18/: CMakeLists.txt  reverse-linked-list.md  reverse_linked_list.c  reverse_linked_list.py
problems/19/: majority-element.md  majority_element.py
problems/2/: solution.go  solution.zig  valid-parentheses.md
problems/20/: add-binary.md  solution.py
problems/21/: diameter-of-binary-tree.md  diameter_of_binary_tree.py
problems/22/: middle-of-the-linked-list.md  middle_of_the_linked_list.py
problems/23/: maximum-depth-of-binary-tree.md  solution.py
problems/24/: contains-duplicate.md  solution.py
problems/25/: maximum-subarray.md  maximum_subarray.py  solution.py
problems/26/: insert-interval.md  insert_interval.py
problems/27/: 01-matrix.md  solution.py
problems/28/: k-closest-points-to-origin.md  k_closest_points_to_origin.py
problems/29/: longest-substring-without-repeating-characters.md  solution.py
problems/3/: merge-two-sorted-lists.md  solution  solution.c  solution.zig  test_solution.py
problems/30/: 3sum.md  solution.py
problems/31/: binary-tree-level-order-traversal.md  binary_tree_level_order_traversal.py
problems/32/: clone-graph.md  clone_graph.py
problems/33/: evaluate-reverse-polish-notation.md  evaluate_reverse_polish_notation.py
problems/34/: course-schedule.md  course_schedule.py
problems/35/: implement-trie-prefix-tree.md  implement_trie_prefix_tree.py
problems/36/: coin-change.md  solution.py
problems/37/: product-of-array-except-self.md  product_of_array_except_self.py
problems/38/: min-stack.md  min_stack.py
problems/39/: solution.py  validate-binary-search-tree.md
problems/4/: solution.go
problems/40/: number-of-islands.md  solution.go  solution.py  solution_test.go
problems/41/: rotting-oranges.md  rotting_oranges.py
problems/42/: search-in-rotated-sorted-array.md  search_in_rotated_sorted_array.py
problems/43/: combination-sum.md  combination_sum.py
problems/44/: permutations.md
problems/45/: merge-intervals.md  solution.py
problems/46/: lowest-common-ancestor-of-a-binary-tree.md  solution.py
problems/47/: solution.py  time-based-key-value-store.md
problems/48/: accounts-merge.md  accounts_merge.py
problems/49/: sort-colors.md
problems/5/: solution.go
problems/50/: word-break.md  word_break.py
problems/51/: partition-equal-subset-sum.md  (+1 more)
scrape/: README.md  main.go
(+51 files in other folders)
